<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/tab_home"
            android:icon="@drawable/home_icon"
            android:id="@+id/home_menu"/>
        <item
            android:title="@string/tab_library"
            android:icon="@drawable/category_icon"
            android:id="@+id/Category_menu"/>
        <item
            android:title="@string/tab_quiz"
            android:icon="@drawable/quiz_icon"
            android:id="@+id/Quiz_menu"/>
        <item
            android:title="@string/tab_settings"
            android:icon="@drawable/settings_icon"
            android:id="@+id/Settings_menu"/>
    </group>
    <item android:title="@string/menu_others">
        <menu>
            <item
                android:title="@string/menu_account"
                android:icon="@drawable/account_icon"
                android:id="@+id/account_menu"/>
            <item
                android:title="@string/logout"
                android:icon="@drawable/logout_icon"
                android:id="@+id/logout_menu"/>
        </menu>
    </item>
</menu>
